WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146088
Swipe gesture can get stuck, preventing scrolling and other gestures
https://bugs.webkit.org/show_bug.cgi?id=146088
Summary
Swipe gesture can get stuck, preventing scrolling and other gestures
Tim Horton
Reported
2015-06-17 16:59:51 PDT
Swipe gesture can get stuck, preventing scrolling and other gestures
Attachments
Patch
(8.78 KB, patch)
2015-06-17 17:00 PDT
,
Tim Horton
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-06-17 17:00:19 PDT
Created
attachment 255051
[details]
Patch
WebKit Commit Bot
Comment 2
2015-06-17 17:02:36 PDT
Attachment 255051
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/ViewGestureControllerMac.mm:411: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2015-06-17 17:04:50 PDT
http://trac.webkit.org/changeset/185679
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug