Swipe gesture can get stuck, preventing scrolling and other gestures https://bugs.webkit.org/show_bug.cgi?id=146088 <rdar://problem/16056087>

Reviewed by Darin Adler.

* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::trackSwipeGesture):
Ignore mouse events that come in while we're doing a swipe.
This prevents potentially problematic mouse events (especially context menus)
won't be processed during a swipe, avoiding situations that can cause
the swipe gesture to get stuck.

* WebCore.xcodeproj/project.pbxproj:
* platform/spi/mac/NSEventSPI.h: Added.
Add an SPI header.


Canonical link: https://commits.webkit.org/164132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185679 268f45cc-cd09-0410-ab3c-d52691b4dbfc